<resources>
    <string name="app_name">Delivery_Lotteria</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="lotteria_app">Lotteria App</string>
    <string name="hello_explore_your_dream_food">hello explore your dream food</string>
    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>
    <string name="full_name">Full Name</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="already_registered">Already Registered?</string>
    <string name="sign_in_android_textalignment">Sign In android:textAlignment=</string>
    <string name="don_t_have_an_account">Don\'t Have An Account?</string>
    <string name="daily_meal">Daily Meal</string>
    <string name="favourite">Favourite</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_cart">My Cart</string>
    <string name="caoducthien16102003_gmail_com">caoducthien16102003@gmail.com</string>
    <string name="s_t_c">S T C</string>
    <string name="search_your_food">Search your food!</string>
    <string name="what_do_you_want">What do you want ?</string>
    <string name="lotteria_xin_chao">Lotteria Xin Chao</string>
    <string name="_8_00_22_00">8:00 - 22:00</string>
    <string name="product_name">Product Name</string>
    <string name="_5_0">5.0</string>
    <string name="th_th_ch_g_si_u_cay_lotteria_t_i_y">Thử thách gà siêu cay Lotteria tại đây !</string>
    <string name="view_more">view more</string>
    <string name="si_u_ph_m_g_buldak">Siêu phẩm gà BULDAK</string>
    <string name="make_order">Make Order</string>
    <string name="total">Total</string>
</resources>